# asvz-bot

./: .gitattributes  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml
asvz/: Cargo.toml
asvz/src/: error.rs  lesson.rs  lib.rs  login.rs
asvz/src/api/: enrollment.rs  mod.rs  search.rs  sport.rs
asvz_bot_derive/: Cargo.toml
asvz_bot_derive/src/: command.rs  command_enum.rs  lib.rs
bot/: Cargo.toml
bot/src/: cmd.rs  job.rs  job_err.rs  job_update_cx.rs  main.rs  state.rs  user.rs
bot/src/job_fns/: enroll.rs  internals.rs  mod.rs  notify.rs  utils.rs
bot_derive/: Cargo.toml
bot_derive/src/: fields_parse.rs  lib.rs
src/: action.rs  cmd.rs  job.rs  job_err.rs  job_update_cx.rs  main.rs  state.rs  user.rs  utils.rs
src/asvz/: error.rs  lesson.rs  login.rs  mod.rs
src/asvz/api/: lesson.rs  mod.rs  search.rs  sport.rs
src/job_fns/: enroll.rs  internals.rs  mod.rs  msg_user.rs  notify.rs  utils.rs
src/state/: job.rs  mod.rs  user.rs
