[package]
name = "asvz"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["cookies", "json"] }
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
reqwest-tracing = "0.2"
thiserror = "1"
chrono = "0.4"
lazy_static = "1"
regex = "1"
url = "2"
html-escape = "0.2"
fastrand = "1.5"
tracing = "0.1"